--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -293,6 +293,9 @@
                 </div>
             </div>
             <div>
+                <div class="text-white">
+                    &copy; 2020 France et Moi. Tous droits réservés
+                </div>
             </div>
         </div><!-- /Footer -->
 
