--- a/views/brittany-normandy.handlebars
+++ b/views/brittany-normandy.handlebars
@@ -2,6 +2,26 @@
 
 <p>Уникальность и богатство Франции заключается в том числе в удивительном разнообразии ее провинций и регионов,
   каждый из которых представляет огромный интерес.</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/brittany-normandy/thumbs/brittany-normandy-thumb-1.jpg" alt="thumb1">
+			<span>Pointe</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/brittany-normandy/brittany-normandy-1.jpg" alt="image1">
+			<div>
+				<h3>pointe <span>/point/</h3>
+				<p>Dance performed on the tips of the toes</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
 <p>Мы хотим Вам представить Бретань, так любимую французами за особый шарм, неспешность, уникальную кухню, уют
   старинных замков и маленьких гостиниц, аромат и свежесть океана.</p>
 <p>Бретань - окруженный Атлантическим океаном полуостров, расположенный на самом западе страны. В свое время
@@ -61,6 +81,25 @@
 <p>Канкаль - устричная столица Франции. Фермы. Музей устриц.</p>
 </p>Сен Мишель - восьмое чудо света. Аббатство с 1300-летней историей.</p>
 <p>Трегье - Кафедральный собор. Мощи Святого Ива, покровителя юристов и, особенно, адвокатов. Старинный город.</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-2">
+			<img src="images/brittany-normandy/thumbs/brittany-normandy-thumb-2.jpg" alt="thumb2">
+			<span>Pointe</span>
+		</a>
+		<div class="lb-overlay" id="image-2">
+			<img src="images/brittany-normandy/brittany-normandy-2.jpg" alt="image2">
+			<div>
+				<h3>pointe <span>/point/</h3>
+				<p>Dance performed on the tips of the toes</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
 
 <h1>Нормандия</h1>
 
@@ -125,6 +164,26 @@
 <p>Карнак - самое крупное в Европе скопление доисторических мегалитов.</p>
 <p>Кимпер - столица Финистера. Собор Святого Корентина. Старинные кварталы. Музей изящных искусств, картины школы
   Пон Авен. Фабрика Кимперского Фаянса.</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-3">
+			<img src="images/brittany-normandy/thumbs/brittany-normandy-thumb-3.jpg" alt="thumb3">
+			<span>Pointe</span>
+		</a>
+		<div class="lb-overlay" id="image-3">
+			<img src="images/brittany-normandy/brittany-normandy-3.jpg" alt="image3">
+			<div>
+				<h3>pointe <span>/point/</h3>
+				<p>Dance performed on the tips of the toes</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
 <p>Плейбен - типичный для Финистера городок. Уникальный кальвер — придорожное распятие.</p>
 <p>Локронан - городок, внесенный в списки самых красивых во Франции. Один из важнейших центров кельтской
   культуры.</p>
