--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <!-- Custom Styles -->
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="stylesheet" href="/styles/lightbox.css">
 </head>
 
-<body class="bg-gray-200 font-sans leading-normal tracking-normal">
+<body class="bg-gray-100 font-sans leading-normal tracking-normal">
     <!-- Container -->
     <div class="container mx-auto">
 
@@ -28,7 +29,7 @@
                     <!--Hoverable Link-->
                     <li class="hoverable hover:bg-blue-800 hover:text-white">
                         <a href="#" class="relative block py-6 px-4 lg:p-6 text-sm lg:text-base font-bold hover:bg-blue-800 hover:text-white">Услуги и цены</a>
-                        <div class="p-6 mega-menu mb-16 sm:mb-0 shadow-xl bg-blue-800">
+                        <div class="p-6 mega-menu mb-16 sm:mb-0 shadow-xl bg-blue-800 z-50">
                             <div class="container mx-auto w-full flex flex-wrap justify-between mx-2">
                                 <div class="w-full text-white mb-8">
                                     <h2 class="font-bold text-2xl text-white">Main Hero Message for the menu section</h2>
@@ -145,7 +146,7 @@
                     <!--Hoverable Link-->
                     <li class="hoverable hover:bg-blue-800 hover:text-white">
                         <a href="#" class="relative block py-6 px-4 lg:p-6 text-sm lg:text-base font-bold hover:bg-blue-800 hover:text-white">О компании</a>
-                        <div class="p-6 mega-menu mb-16 sm:mb-0 shadow-xl bg-blue-800">
+                        <div class="p-6 mega-menu mb-16 sm:mb-0 shadow-xl bg-blue-800 z-50">
                             <div class="container mx-auto w-full flex flex-wrap justify-between mx-2">
                                 <div class="w-full text-white mb-8">
                                     <h2 class="font-bold text-2xl text-white">Main Hero Message for the menu section</h2>
@@ -222,7 +223,7 @@
                     <img class="h-16 w-16 md:h-24 md:w-24 rounded-full mx-auto md:mx-0 md:mr-6" src="/images/avatar-eugeny.jpg">
                     <div class="text-center md:text-left">
                         <h2 class="text-lg">Евгений Пепеляев</h2>
-                        <div class="text-purple-500">Трансферы</div>
+                        <div class="text-blue-300">Трансферы</div>
                         <div class="text-gray-700">info@frmoi.fr</div>
                         <div class="text-gray-700">+(33) 675 789 803 </div>
                     </div>
@@ -232,7 +233,7 @@
                     <img class="h-16 w-16 md:h-24 md:w-24 rounded-full mx-auto md:mx-0 md:mr-6" src="/images/avatar-dmitry.jpg">
                     <div class="text-center md:text-left">
                         <h2 class="text-lg">Дмитрий Мисуркин</h2>
-                        <div class="text-purple-500">Экскурсии</div>
+                        <div class="text-blue-300">Экскурсии</div>
                         <div class="text-gray-700">info@frmoi.fr</div>
                         <div class="text-gray-700">+(33) 675 789 777</div>
                     </div>
@@ -247,9 +248,9 @@
                         </p>
                     </div>
                     <div class="px-6 py-4">
-                        <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2">#photography</span>
-                        <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2">#travel</span>
-                        <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700">#winter</span>
+                        <span class="inline-block bg-gray-100 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2">#photography</span>
+                        <span class="inline-block bg-gray-100 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2">#travel</span>
+                        <span class="inline-block bg-gray-100 rounded-full px-3 py-1 text-sm font-semibold text-gray-700">#winter</span>
                     </div>
                 </div>
 
@@ -261,7 +262,7 @@
                         <h4 class="text-xl text-black leading-tight">WhatsApp</h4>
                         <p class="text-base text-gray-700 leading-normal">Мы всегда на линии!</p>
                         <div class="mt-4">
-                            <button class="text-purple-500 hover:text-white hover:bg-purple-500 border border-purple-500 text-xs font-semibold rounded-full px-4 py-1 leading-normal">Отправить сообщение</button>
+                            <button class="text-blue-300 hover:text-white hover:bg-blue-300 border border-blue-300 text-xs font-semibold rounded-full px-4 py-1 leading-normal">Отправить сообщение</button>
                         </div>
                     </div>
                 </div>
