--- a/views/burgundy.handlebars
+++ b/views/burgundy.handlebars
@@ -1,22 +1,62 @@
 <h1>Бургундия</h1>
 
 <p>Бургундия расположена на Юго-восток от Парижа, около 360 километров по шоссе Париж — Дижон.</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/burgundy/thumbs/burgundy-thumb-1.jpg" alt="thumb1">
+			<span>Pointe</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/burgundy/burgundy-1.jpg" alt="image1">
+			<div>
+				<h3>pointe <span>/point/</h3>
+				<p>Dance performed on the tips of the toes</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
 <p>Главными достопримечательностями провинции можно назвать:</p>
-<p>Аббатство Везлей - основано в 878 году.</p>
-<p>Крупнейший религиозный центр Европы, шедевр романского стиля — аббатство Везлей сыграло особую роль в
-  Крестовых подах. Связано с именами Св. Бернара, Людовика VII, Элеоноры Аквитанской, Филиппом Августом,
-  Ричардом Львиное Сердце. В крипте хранятся мощи Св. Марии-Магдалины. Внесено в список выдающихся памятников
-  Юнеско.</p>
-<p>Оксер - живописный город на берегах реки Йона. Великолепные готические и романские церкви, старинные
-  кварталы.</p>
-<p>Шабли - город, всемирно известен своим белым вином. Тут насчитывается более сотни производителей этого
-  вкусного и полезного напитка.</p>
-<p>Северная Бургундия - "амфитеатр" виноградников Шабли. Дегустационные погреба.</p>
-<p>Винная дорога Бургундии - проходит между городами Дижон и Бон, и чуть южнее Бона.</p>
-<p>Дижон - столица региона. Дворец герцогов. Музей изящных искусств.</p>
-<p>Бон - винная столица Бургундии. В бывшем дворце герцогов Бургундии сейчас располагается винный музей.
-  Бесконечные монастырские погреба, где можно напробоваться до потери респектабельности. В конце января 2005
-  года в городе проходит празднование Св. Винсента — святого патрона виноделов.</p>
+<p>
+  <ul>
+    <li>
+      <span class="text-black">Аббатство Везлей</span> - основано в 878 году. Крупнейший религиозный центр Европы,
+      шедевр романского стиля - аббатство Везлей сыграло особую роль в Крестовых подах. Связано с именами Св.
+      Бернара, Людовика VII, Элеоноры Аквитанской, Филиппом Августом, Ричардом Львиное Сердце. В крипте хранятся
+      мощи Св. Марии-Магдалины. Внесено в список выдающихся памятников Юнеско.
+    </li>
+    <li>
+      <span class="text-black">Оксер</span> - живописный город на берегах реки Йона. Великолепные готические и
+      романские церкви, старинные кварталы.
+    </li>
+    <li>
+      <span class="text-black">Шабли</span> - город, всемирно известен своим белым вином. Тут насчитывается более
+      сотни производителей этого вкусного и полезного напитка.
+    </li>
+    <li>
+      <span class="text-black">Северная Бургундия</span> - "амфитеатр" виноградников Шабли. Дегустационные
+      погреба.
+    </li>
+    <li>
+      <span class="text-black">Винная дорога Бургундии</span> - проходит между городами Дижон и Бон, и чуть южнее
+      Бона.
+    </li>
+    <li>
+      <span class="text-black">Дижон</span> - столица региона. Дворец герцогов. Музей изящных искусств.
+    </li>
+    <li>
+      <span class="text-black">Бон</span> - винная столица Бургундии. В бывшем дворце герцогов Бургундии сейчас
+      располагается винный музей. Бесконечные монастырские погреба, где можно напробоваться до потери
+      респектабельности. В конце января 2005 года в городе проходит празднование Св. Винсента — святого патрона
+      виноделов.
+    </li>
+  </ul>
+</p>
 <p>Бон — старый, красивый и интересный город. Не будет лишним совершить небольшое виртуальное путешествие по его
   улочкам. Прогуляемся, к примеру, метров сто...</p>
 
