--- a/views/lyon.handlebars
+++ b/views/lyon.handlebars
@@ -1,15 +1,71 @@
-<h1>Лион</h1>
+<h1>
+  Лион
+</h1>
 
-<h2>Лион. Дофине. Савойя. Окрестности озера Леман</h2>
-
-<p>Лиoн — город во Франции, административный центр региона Рона-Альпы, департамента Рона, а также 14 кантонов;
-  имеет 6 предместий.</p>
-<p>Город Лион является центром "Большого Лиона" или Лионского сообщества городов, состоящего из 57
+<p>
+  Лиoн — город во Франции, административный центр региона Рона-Альпы, департамента Рона, а также 14 кантонов.
+  Состоит из 6-ти предместий.
+</p>
+<p>
+  Город Лион является центром "Большого Лиона" или Лионского сообщества городов, состоящего из 57
   административных единиц и являющегося самым большим по численности населения (более 1,2 млн жителей) из
-  подобных образований во Франции.</p>
-<p>Дофине — историческая область Франции, включающая нынешние департаменты Изер, Верхние Альпы, большую часть
-  департамента Дром и небольшую часть департамента Воклюз. Главный город — Гренобль.</p>
-<p>Савойя — историческая область на юго-востоке Франции у подножия Альп. Некоторое время существовала в качестве
+  подобных образований во Франции.
+</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/lyon/thumbs/lyon-thumb-1.jpg" alt="thumb1">
+			<span>Pointe</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/lyon/lyon-1.jpg" alt="image1">
+			<div>
+				<h3>pointe <span>/point/</h3>
+				<p>Dance performed on the tips of the toes</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<h2>
+  Дофине
+</h2>
+
+<p>
+  Дофине — историческая область Франции, включающая нынешние департаменты Изер, Верхние Альпы, большую часть
+  департамента Дром и небольшую часть департамента Воклюз. Главный город — Гренобль.
+</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-2">
+			<img src="images/lyon/thumbs/lyon-thumb-2.jpg" alt="thumb2">
+			<span>Pointe</span>
+		</a>
+		<div class="lb-overlay" id="image-2">
+			<img src="images/lyon/lyon-2.jpg" alt="image2">
+			<div>
+				<h3>pointe <span>/point/</h3>
+				<p>Dance performed on the tips of the toes</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<h2>
+  Савойя
+</h2>
+
+<p>
+  Савойя — историческая область на юго-востоке Франции у подножия Альп. Некоторое время существовала в качестве
   самостоятельного герцогства, которое в период своего расцвета включало территории Ниццы, Генуи, Женевы и
   Пьемонта. С 1860 года в составе Франции, хотя Савойская династия становится правящей во вновь созданной Италии.
-  В современной Франции на территории Савойи расположены два департамента — Савойя и Верхняя Савойя.</p>
+  В современной Франции на территории Савойи расположены два департамента — Савойя и Верхняя Савойя.
+</p>
