--- a/views/normandy.handlebars
+++ b/views/normandy.handlebars
@@ -1,1 +1,121 @@
-<h1>Нормандия</h1>
+<h1>
+  Нормандия
+</h1>
+
+<p>
+  Бенедиктинские аббатства. Продолжительность экскурсии порядка 5-6 часов. Выезд из Довиля. Переезд через лес
+  Бротон к живописным берегам Сены.
+</p>
+<p>
+  <ul>
+    <li>
+      <span class="text-black">Аббатство Жумьеж</span> - "самые восхитительные руины" Франции, пронизанные духом
+      байроновского романтизма.
+    </li>
+    <li>
+      <span class="text-black">Аббатство Сэн Вандрий</span>.
+    </li>
+    <li>
+      <span class="text-black">Фекам</span> - Аббатская церковь Троицы XII века. Дворец Бенедиктинцев. Богатейшие
+      интерьеры. Музей запаха и вкуса. Производство всемирно известного ликера Бенедиктин. Дегустация.
+    </li>
+  </ul>
+</p>
+<p>
+  Возвращение в Довиль через мост "Нормандия" в устье Сены.
+</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/normandy/thumbs/normandy-thumb-1.jpg" alt="thumb1">
+			<span>Pointe</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/normandy/normandy-1.jpg" alt="image1">
+			<div>
+				<h3>pointe <span>/point/</h3>
+				<p>Dance performed on the tips of the toes</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>Основные достопримечательности:</p>
+<p>
+  <ul>
+    <li>
+      <span class="text-black">Лес Бротон</span> - часть национального парка Бротон, заповедная зона,
+      раскинувшаяся вдоль берегов Сены от Руана до Гавра. Сена, прорывая русло в постледниковый период в
+      осадочной известковой породе, причудливо извиваясь, несет свои воды из Бургундии (плато над Дижоном)
+      через Париж и Руан в Атлантику. На поворотах Сены за многие сотни лет обнажился известняк.
+    </li>
+    <li>
+      <span class="text-black">Мельница Овиль</span> - старейшая в Нормандии каменная ветряная мельница XIII
+      века. В свое время принадлежала монастырю Жумьеж, находящемуся на противоположном берегу Сены. Мельница
+      доступна для посещения, и, если позволяют погодные условия, можно увидеть, как она работает.
+    </li>
+    <li>
+      <span class="text-black">Дуб а-ля Кюв</span> - вековечный семиметровый в обхвате дуб, расходящийся на
+      четыре ствола, образующих подобие гигантской чаши (кюв - чаша, фр.).
+    </li>
+    <li>
+      <span class="text-black">Смотровая площадка</span> - белые скалы, синева неба и вод, зелень лугов и рощ в
+      пойме, сады и аккуратные фахверковые домики в типично нормандском стиле, баржи и морские суда, идущие
+      вверх по течению в Руан, светлые строения древнего монастыря.
+    </li>
+    <li>
+      <span class="text-black">Жумьеж</span> - на пологом берегу Сены. Живописные романтические развалины
+      аббатства, основанного в Св. Филибером в VII веке, построенного заново в X веке герцогом Нормандии Гийомом
+      Длинный Меч (предок Гийома Завоевателя, герцога Нормандии, захватившего в 1066 году Англию), перестроенное
+      в XI веке (1067 год). Шедевр романского стиля. Поражает своими размерами, гармоничными пропорциями,
+      точностью деталей, качеством строительства. В годы французской революции монахов разогнали и монастырь
+      взорвали. Значительная часть построек все же сохранилась. С позапрошлого века грандиозные белокаменные
+      строения привлекают любителей романтических прогулок. В окрестностях Жумьежа находится центр верховой езды
+      и несколько центров коневодства.
+    </li>
+    <li>
+      <span class="text-black">Земли Ко, города Ивто, Годервиль, Больбек, Фекам</span> - здесь бывал писатель
+      Мопассан, в этих городах разворачивались действия и проживали герои его произведений.
+    </li>
+    <li>
+      <span class="text-black">Сэн Вандрий</span> - граф Вандрий, царедворец французского короля Дагобера, на
+      вершине славы покидает двор и молодую супругу и одевает робу монаха. В 649 году он основывает монастырь.
+      Посещение аббатства является достойным дополнением к осмотру Жумьеж.
+    </li>
+    <li>
+      <span class="text-black">Фекам</span> - город с двадцатитысячным населением. До недавнего времени это был
+      крупный рыбацкий порт на французской Атлантике. По сей день, возвращаясь с промысла, рыбаки продают в порту
+      свой улов. Здесь же продаются устрицы, мидии другие дары моря. Бухта, где находится порт, защищена утесом,
+      на котором возвышается рыбацкая церковь Богоматери Охраняющей.<br>
+      До революции большую часть города занимало аббатство. Монастырь хранил с VII века ценнейшие реликвии,
+      связанные со Священной Кровью Христа и Исааком, племянником Жозефа Ариматия, прибывшего на территорию,
+      занимаемую современной Францией, со Священным Граалем. Ровно тысячу лет назад, монастырь преобразовался в
+      аббатство Св. Троицы, ставшее самым значимым религиозным поселением на Атлантическом побережье.
+      Многочисленные паломники, в том числе герцоги Нормандии и короли Франции, посещали его. До XVI века
+      монастырь Фекама превосходил своим влиянием и славой другое знаменитое бенедиктинское аббатство - Сэн
+      Мишель. Монастырь в Фекаме, находящийся на границе трех стихий - моря, земли и воздуха - сравнивали с
+      Небесными вратами, с Небесным Иерусалимом, с Дворцом, достойным принять Господа.
+    </li>
+    <li>
+      <span class="text-black">Готическая церковь Св. Троицы</span> - главный храм бывшего аббатства, ошеломляет
+      и архитектурными деталями и своими размерами: 127 метров (Нотр Дам в Париже составляет 130 метров).
+    </li>
+    <li>
+      <span class="text-black">Дворец Бенедиктинцев</span> - открывает посетителям великолепные залы:
+      кардинальская комната, аббатский зал, библиотеку, парадную лестницу, часовню, парадный зал. В коллекции
+      музея содержатся предметы большой культурной и исторической ценности, в том числе письма кардинала
+      Ришелье.<br>
+      Посещение производства ликера Бенедиктин предваряется залами, рассказывающими о пятисотлетней истории
+      напитка и приоткрывающими завесу над таинствами мира запахов. В завершении визита - дегустация.
+    </li>
+    <li>
+      <span class="text-black">Мост "Нормандия"</span> - безопорный мост - это кратчайший путь из Земли Ко и
+      Гавра на южный берег Сены, к Онфлеру и Довилю. Грандиозное сооружение, триумф инженерной мысли и эстетики.
+      С него открывается уникальный вид на устье Сены и города Гавр и Онфлер.
+    </li>
+  </ul>
+</p>
