--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -612,6 +612,12 @@ p {
   margin-bottom: 1rem;
 }
 
+li {
+  --text-opacity: 1;
+  color: #4a5568;
+  color: rgba(74, 85, 104, var(--text-opacity));
+}
+
 .container {
   width: 100%;
 }
