--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,10 @@
         <!-- Navigation -->
         <nav class="relative bg-white border-b-2 border-gray-300 text-gray-900">
             <div class="container mx-auto flex justify-between">
-                <div class="relative block p-4 lg:p-6 text-xl text-blue-600 font-bold">France et Moi</div>
+                <div class="relative block p-1 lg:p-2 text-xl text-blue-600 font-bold">
+                    <img class="h-12 w-12 float-left" src="/images/logo-web.svg" alt="France et Moi">
+                    <div class="float-right mt-3">France et Moi</div>
+                </div>
                 <ul class="flex">
 
                     <!--Regular Link-->
