Add some content

--- a/views/brittany-normandy.handlebars
+++ b/views/brittany-normandy.handlebars
@@ -11,13 +11,13 @@
 	<li>
 		<a href="#image-1">
 			<img src="images/brittany-normandy/thumbs/brittany-normandy-thumb-1.jpg" alt="thumb1">
-			<span>Pointe</span>
+			<span>Cliquez ici</span>
 		</a>
 		<div class="lb-overlay" id="image-1">
 			<img src="images/brittany-normandy/brittany-normandy-1.jpg" alt="image1">
 			<div>
-				<h3>pointe <span>/point/</h3>
-				<p>Dance performed on the tips of the toes</p>
+				<h3>Бретань <span>/Bretagne/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				<!-- a href="#image-10" class="lb-prev">Prev</a>
 				<a href="#image-2" class="lb-next">Next</a -->
 			</div>
@@ -102,13 +102,13 @@
 	<li>
 		<a href="#image-2">
 			<img src="images/brittany-normandy/thumbs/brittany-normandy-thumb-2.jpg" alt="thumb2">
-			<span>Pointe</span>
+			<span>Cliquez ici</span>
 		</a>
 		<div class="lb-overlay" id="image-2">
 			<img src="images/brittany-normandy/brittany-normandy-2.jpg" alt="image2">
 			<div>
-				<h3>pointe <span>/point/</h3>
-				<p>Dance performed on the tips of the toes</p>
+				<h3>Нормандия <span>/Normandie/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				<!-- a href="#image-10" class="lb-prev">Prev</a>
 				<a href="#image-2" class="lb-next">Next</a -->
 			</div>
@@ -250,13 +250,13 @@
 	<li>
 		<a href="#image-3">
 			<img src="images/brittany-normandy/thumbs/brittany-normandy-thumb-3.jpg" alt="thumb3">
-			<span>Pointe</span>
+			<span>Cliquez ici</span>
 		</a>
 		<div class="lb-overlay" id="image-3">
 			<img src="images/brittany-normandy/brittany-normandy-3.jpg" alt="image3">
 			<div>
-				<h3>pointe <span>/point/</h3>
-				<p>Dance performed on the tips of the toes</p>
+				<h3>Нормандия <span>/Normandie/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				<!-- a href="#image-10" class="lb-prev">Prev</a>
 				<a href="#image-2" class="lb-next">Next</a -->
 			</div>
