--- a/views/burgundy.handlebars
+++ b/views/burgundy.handlebars
@@ -1,26 +1,6 @@
 <h1>Бургундия</h1>
 
 <p>Бургундия расположена на Юго-восток от Парижа, около 360 километров по шоссе Париж — Дижон.</p>
-
-<ul class="lb-album">
-	<li>
-		<a href="#image-1">
-			<img src="images/burgundy/thumbs/burgundy-thumb-1.jpg" alt="thumb1">
-			<span>Pointe</span>
-		</a>
-		<div class="lb-overlay" id="image-1">
-			<img src="images/burgundy/burgundy-1.jpg" alt="image1">
-			<div>
-				<h3>pointe <span>/point/</h3>
-				<p>Dance performed on the tips of the toes</p>
-				<!-- a href="#image-10" class="lb-prev">Prev</a>
-				<a href="#image-2" class="lb-next">Next</a -->
-			</div>
-			<a href="#page" class="lb-close">x Close</a>
-		</div>
-	</li>
-</ul>
-
 <p>Главными достопримечательностями провинции можно назвать:</p>
 <p>
   <ul>
@@ -57,6 +37,26 @@
     </li>
   </ul>
 </p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/burgundy/thumbs/burgundy-thumb-1.jpg" alt="thumb1">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/burgundy/burgundy-1.jpg" alt="image1">
+			<div>
+				<h3>Бургундия <span>/Bourgogne/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
 <p>Бон — старый, красивый и интересный город. Не будет лишним совершить небольшое виртуальное путешествие по его
   улочкам. Прогуляемся, к примеру, метров сто...</p>
 
