--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
         <!-- Navigation -->
         <nav class="relative bg-white border-b-2 border-gray-300 text-gray-900">
             <div class="container mx-auto flex justify-between">
-                <div class="relative block p-1 lg:p-2 text-xl text-blue-600 font-bold">
+                <div class="relative block p-1 lg:p-2 text-xl text-red-600 font-bold">
                     <img class="h-12 w-12 float-left" src="/images/logo-web.svg" alt="France et Moi">
                     <div class="float-right mt-3">France et Moi</div>
                 </div>
@@ -112,6 +112,9 @@
                                         </li>
                                         <li>
                                             <a href="/france-for-children" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Франция для детей</a>
+                                        </li>
+                                        <li>
+                                            <a href="/excursion-programs" class="block p-1 hover:bg-blue-600 text-gray-300 hover:text-white text-sm">Экскурсионные программы</a>
                                         </li>
                                     </ul>
                                     <!-- p class="text-gray-100 text-sm">Prioritize these line items game-plan draw a line in the sand come up with something buzzworthy UX upstream selling.</p>
@@ -245,7 +248,7 @@
                 <div class="max-w-sm rounded-lg overflow-hidden shadow-lg m-4">
                     <img class="w-full" src="/images/card-top.jpg" alt="Sunset in the mountains">
                     <div class="px-6 py-4">
-                        <div class="text-xl mb-2">The Coldest Sunset</div>
+                        <div class="text-xl mb-2">Закат в Альпах</div>
                         <p class="text-gray-700 text-base">
                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
                         </p>
