--- a/views/lyon.handlebars
+++ b/views/lyon.handlebars
@@ -16,13 +16,13 @@
 	<li>
 		<a href="#image-1">
 			<img src="images/lyon/thumbs/lyon-thumb-1.jpg" alt="thumb1">
-			<span>Pointe</span>
+			<span>Cliquez ici</span>
 		</a>
 		<div class="lb-overlay" id="image-1">
 			<img src="images/lyon/lyon-1.jpg" alt="image1">
 			<div>
-				<h3>pointe <span>/point/</h3>
-				<p>Dance performed on the tips of the toes</p>
+				<h3>Дофине <span>/Dauphiné/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				<!-- a href="#image-10" class="lb-prev">Prev</a>
 				<a href="#image-2" class="lb-next">Next</a -->
 			</div>
@@ -44,13 +44,13 @@
 	<li>
 		<a href="#image-2">
 			<img src="images/lyon/thumbs/lyon-thumb-2.jpg" alt="thumb2">
-			<span>Pointe</span>
+			<span>Cliquez ici</span>
 		</a>
 		<div class="lb-overlay" id="image-2">
 			<img src="images/lyon/lyon-2.jpg" alt="image2">
 			<div>
-				<h3>pointe <span>/point/</h3>
-				<p>Dance performed on the tips of the toes</p>
+				<h3>Савойя <span>/Savoie/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				<!-- a href="#image-10" class="lb-prev">Prev</a>
 				<a href="#image-2" class="lb-next">Next</a -->
 			</div>
