--- a/views/normandy.handlebars
+++ b/views/normandy.handlebars
@@ -29,13 +29,13 @@
 	<li>
 		<a href="#image-1">
 			<img src="images/normandy/thumbs/normandy-thumb-1.jpg" alt="thumb1">
-			<span>Pointe</span>
+			<span>Cliquez ici</span>
 		</a>
 		<div class="lb-overlay" id="image-1">
 			<img src="images/normandy/normandy-1.jpg" alt="image1">
 			<div>
-				<h3>pointe <span>/point/</h3>
-				<p>Dance performed on the tips of the toes</p>
+				<h3>Нормандия <span>/Normandie/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
 				<!-- a href="#image-10" class="lb-prev">Prev</a>
 				<a href="#image-2" class="lb-next">Next</a -->
 			</div>
