--- a/views/paris.handlebars
+++ b/views/paris.handlebars
@@ -1,1 +1,182 @@
-<h1>Париж</h1>
+<h1>
+  Париж
+</h1>
+
+<p>
+  Я стою на мосту Искусств. Подо мной течет Сена.
+</p>
+<p>
+  Справа - построенное на средства кардинала Мазарини элегантное задние XVII века, украшенное куполом с золотыми
+  прожилками - Академия наук Франции. Напротив Академии расположен Лувр, где собирались академики при основателе
+  Академии наук, Арманде де Плесис, более известном, как кардинал Ришелье. Строгий, выверенный, рациональный
+  фасад с колоннами и пилястрами, завершенный капитолием.
+</p>
+<p>
+  Светлый камень, постройками из которого изобилует столица.
+</p>
+<p>
+  Стиль.
+</p>
+<p>
+  Я в Париже...
+</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/paris/thumbs/paris-thumb-1.jpg" alt="thumb1">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/paris/paris-1.jpg" alt="image1">
+			<div>
+				<h3>Париж <span>/Paris/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>
+  Стоя на мосту обращаешь внимание на то, как скоординированы два здания, построенные или перестроенные 330 лет
+  назад. Если присмотреться, то четко по оси академии находится центр двора КАРЕ. А это уже XVI век, когда на
+  Руси-матушке вел переписку князь Курбский с Иваном Грозным.
+</p>
+<p>
+  Во времена Малюты Скуратова в Париже тоже времени зря не теряли, особенно в августе 1572 года. Если пройти 2/3
+  моста в сторону Лувра, можно увидеть колокольню, с которой прозвучал сигнал к началу Варфоломеевской ночи.
+</p>
+<p>
+  Правда, печальные исторические события не делают злополучную колокольню, да и саму церковь Св. Германа, менее
+  красивыми и интересными.
+</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-2">
+			<img src="images/paris/thumbs/paris-thumb-2.jpg" alt="thumb2">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-2">
+			<img src="images/paris/paris-2.jpg" alt="image2">
+			<div>
+				<h3>Париж <span>/Paris/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>
+  Если посмотреть в противоположную сторону, можно увидеть другую башню. На этот раз уже Эйфелеву, наполовину
+  скрываемую зданием вокзала, изобиловавшего техническими новинками уже 105 лет назад. Вы в Москве много видели
+  электрических подъемников на Ярославском вокзале? Шеведевр Лелу был перестроен в музей, став шедевром итальянца
+  Аулетти, чтобы достойно принять шедевры Ренуара, Делакруа, Фландрана, Синьяка, Гогена, Матисса, Ван Гога, Милет,
+  Мане и Моне, Руссо и Руссо.
+</p>
+<p>
+  Кстати, недалеко от моста, где я стою, жили и Руссо (уже третий) и Вольтер и Дидро и многие другие не худшие
+  представители человечества.
+</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-3">
+			<img src="images/paris/thumbs/paris-thumb-3.jpg" alt="thumb3">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-3">
+			<img src="images/paris/paris-3.jpg" alt="image3">
+			<div>
+				<h3>Париж <span>/Paris/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>
+  Если снова посмотреть в противоположную сторону, можно увидеть кондитерскую. Не проходите мимо! Хотя,
+  проходите... иначе Вы рискуете просидеть всю оставшуюся жизнь в интерьере Наполеона III за чашкой кофе или чая
+  с классическим пирожным типа "Париж-Брест" или кусочком бисквита "Кадора", пропитанного местным ароматнейшим
+  алкоголем, с пралинэ, в золотистой оборке, с деликатным желе и орешком.... Между нами, парижанами, я не мог
+  выйти из первой моей парижской кондитерской более четырех часов.
+</p>
+<p>
+  Видимо, проще надо питаться. Например - макаронами. Но не по-флотски, а по-парижски, а здесь макароны - это
+  мендалеподобная выпечка с прослойкой. И таких макарон в Париже более 5 сортов. И это не предел, поскольку
+  некоторые "беспредельщики" от гастрономии делают аж 18 сортов! И все разноцветные и очень вкусные.
+</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-4">
+			<img src="images/paris/thumbs/paris-thumb-4.jpg" alt="thumb4">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-4">
+			<img src="images/paris/paris-4.jpg" alt="image4">
+			<div>
+				<h3>Париж <span>/Paris/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>
+  Попробуем все-таки отвлечься от вкусного и посмотреть против течения Сены. Напротив - шпиль и башни Нотр Дам де
+  Париж, а ей, старушке, уже 840 лет. Немного ближе - еще один шпиль, поновее, ему 770 лет. Этот шпиль возвышается
+  над Священной часовней. Название более, чем скромное, если учесть, что именно в ней хранится терновый венец Сына
+  Божьего. Кстати, если сегодня первая пятница месяца, можно посмотреть не только Часовню, но и венец.
+</p>
+<p>
+  А, например, Елисейский дворец можно посмотреть изнутри только один раз в году. Да и с моста Искусств его не
+  видно. Расскажу лучше о том, что вижу. Даже не расскажу, иначе рассказ быстро превтатится в объемный
+  исторический труд, а назову всего по одному имени на каждый минувший век. Итак, не двигаясь с места III век -
+  Дионисий, V век - первый король Кловис, VI-VII века - король Дагобер, VIII-IX века - граф Эд Парижский, X-XI
+  века - королева Анна Ярославна, XII век - жертва войны гвельтов и гиббелинов папа Александр III, тогда еще не
+  Римский, а Санский, XIII век - "победители" катарско-альбигийско-богумилской ереси веревочники-франсисканцы,
+  XIV век - последний Великий Магистр Тамплиеров Жак Молэ, XV век - Жанна д'Арк, XVI век - дофин Генрих Анжуйский,
+  XVII век - король Людовик XIII, XVIII век - Бенжамин Франклин, XIX век - Видок, XX век - Дягилев, XXI век - ВЫ.
+</p>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-5">
+			<img src="images/paris/thumbs/paris-thumb-5.jpg" alt="thumb5">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-5">
+			<img src="images/paris/paris-5.jpg" alt="image1">
+			<div>
+				<h3>Париж <span>/Paris/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<p>
+  Впрочем, в Париже есть и другие мосты, с которых можно посмотреть по сторонам. Да и не с моста тоже есть, куда
+  посмотреть. Приезжайте в Париж, а лучшие места, где стоит постоять - за нами.
+</p>
+<p>
+  Вы увидите многообразие, величие, красоту, падения и взлеты, радость и слезы красоты и причуды страны, которую
+  местные жители именуют как FRANCE, и в гранях этого алмаза истории и культуры Вы увидите отражение вашего Я.
+</p>
