--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>France et Moi</title>
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
     <!-- Custom Styles -->
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="/styles/lightbox.css">
@@ -214,15 +216,15 @@
             </div>
         </nav><!-- /Navigation -->
 
-        <!-- Banner -->
+        <!-- Slider -->
         <div class="flex">
-            {{{ slide }}}
-        </div><!-- /Banner -->
+            {{{slide}}}
+        </div><!-- /Slider -->
 
         <!-- Content -->
         <div class="flex grid grid-cols-3 gap-4">
             <div class="col-span-2 m-4">
-                {{{ body }}}
+                {{{body}}}
             </div>
             <div>
                 <div class="md:flex bg-white rounded-lg p-6 shadow-lg m-4">
@@ -245,33 +247,9 @@
                     </div>
                 </div>
 
-                <div class="max-w-sm rounded-lg overflow-hidden shadow-lg m-4">
-                    <img class="w-full" src="/images/card-top.jpg" alt="Sunset in the mountains">
-                    <div class="px-6 py-4">
-                        <div class="text-xl mb-2">Закат в Альпах</div>
-                        <p class="text-gray-700 text-base">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.
-                        </p>
-                    </div>
-                    <div class="px-6 py-4">
-                        <span class="inline-block bg-gray-100 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2">#photography</span>
-                        <span class="inline-block bg-gray-100 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2">#travel</span>
-                        <span class="inline-block bg-gray-100 rounded-full px-3 py-1 text-sm font-semibold text-gray-700">#winter</span>
-                    </div>
-                </div>
+                {{>social/instagram}}
 
-                <div class="max-w-sm mx-auto flex p-6 bg-white rounded-lg shadow-xl m-4">
-                    <div class="flex-shrink-0">
-                        <img class="h-12 w-12" src="/images/whatsapp.svg" alt="WhatsApp">
-                    </div>
-                    <div class="ml-6 pt-1">
-                        <h4 class="text-xl text-black leading-tight">WhatsApp</h4>
-                        <p class="text-base text-gray-700 leading-normal">Мы всегда на линии!</p>
-                        <div class="mt-4">
-                            <button class="text-blue-300 hover:text-white hover:bg-blue-300 border border-blue-300 text-xs font-semibold rounded-full px-4 py-1 leading-normal">Отправить сообщение</button>
-                        </div>
-                    </div>
-                </div>
+                {{>weather}}
             </div>
         </div><!-- /Content -->
 
