Add some content

--- a/views/champagne.handlebars
+++ b/views/champagne.handlebars
@@ -1,1 +1,76 @@
-<h1>Шампань</h1>
+<h1>
+  Шампань
+</h1>
+
+<ul class="lb-album">
+	<li>
+		<a href="#image-1">
+			<img src="images/champagne/thumbs/champagne-thumb-1.jpg" alt="thumb1">
+			<span>Cliquez ici</span>
+		</a>
+		<div class="lb-overlay" id="image-1">
+			<img src="images/champagne/champagne-1.jpg" alt="image1">
+			<div>
+				<h3>Шампань <span>/Champagne/</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+				<!-- a href="#image-10" class="lb-prev">Prev</a>
+				<a href="#image-2" class="lb-next">Next</a -->
+			</div>
+			<a href="#page" class="lb-close">x Close</a>
+		</div>
+	</li>
+</ul>
+
+<h2>
+  Труа
+</h2>
+
+<p>
+  Старинный город, фахверковые дома.
+</p>
+
+<h2>
+  Провен
+</h2>
+
+<p>
+  Город-крепость, внесенный недавно в список памятников человечества ЮНЕСКО. Летом в Провене проходят
+  средневековые праздники.
+</p>
+
+<h2>
+  Реймс
+</h2>
+
+<p>
+  Город Реймс - столица Шампани, с посещением погребов. Город, где проходили коронации почти всех французских
+  королей.
+</p>
+<p>
+  Нотр Дам Де Реймс – кафедральный собор, шедевр готики, место коронации французских королей. Сен Реми – базилика,
+  шедевр романского стиля. Место крещения Кловиса-Хлодвига — короля Франков. Триумфальная арка Римской эпохи.
+</p>
+<p>
+  Реймс - одна из столиц региона Шампань, город с двухтысячелетней историей, столица провинции Бельгия периода
+  Римской Империи. В Реймсе сохранились памятники периода начала нашей эры: например, Триумфальная арка II в.
+  н.э., посвященная Богу войны Марсу.
+</p>
+<p>
+  Реймс вошел в историю как город, в котором происходили коронации французских королей с 816 г. по 1824 г. В
+  Реймсе в 498 г. произошло обращение (крещение) франкского короля Кловиса (Хлодвига) в католическую веру, что
+  определило историческую судьбу Франции на многие столетия.
+</p>
+<p>
+  В Реймсе находится один из шедевров готики – кафедральный собор Нотр Дам, постройки XIII века, также базилика
+  Св. Ремигия XI века, открытая недавно для посещения после многолетней реставрации.
+</p>
+<p>
+  Регион Шампань-Арден, стал местом многочисленных военных столкновений между Францией и ее восточной соседкой
+  Германией в XIX и XX веке. Здесь же была подписана капитуляция 7 мая 1945 года. В Реймсе произошла историческая
+  встреча президента Франции Де Голя с главой ФРГ Аденауером, которая положила начало созданию Новой Европы.
+</p>
+<p>
+  На Реймских холмах и в долине реки Марна с античных времен культивируется виноград. На рубеже XVII-XVIII в.в.
+  монах Дон Периньон изобрел метод получения игристых вин: двухэтапная ферментация, который положил начало
+  производству знаменитого на весь мир шампанского.
+</p>
