--- a/views/heart-of-france.handlebars
+++ b/views/heart-of-france.handlebars
@@ -1,1 +1,39 @@
-<h1>Сердце Франции</h1>
+<h1>
+  Сердце Франции и Луара Французская
+</h1>
+
+<p>
+  Замки Луары - свидетели великолепия двора в XIV-XVII веков. Мы предлагаем Вам посетить несколько замков и винных
+  погребов, а также отобедать в подобающей обстановке.
+</p>
+<p>
+  В долине реки Луары, одной из крупнейших рек Франции, и ее притоках Шер, Въен, Андр, Луар, Беврон, находятся
+  исторические области Турень, Анжу, Берри, Орлеан, где расположены многочисленные военные замки,
+  замки-резиденции, охотничьи угодья королевской семьи династий Валуа, Валуа-Ангулемских, Бурбонов,
+  Бурбонов-Орлеанских, а также бывшие владения древнейших французских аристократических фамилий.
+</p>
+<p>
+  Лош, Амбуаз, Блуа, Шамбор, Шенонсо, Тур, Орлеан, Шинон, Шеверни, Сомюр, Монришар, Анжэ - были свидетелями
+  кровопролитных столкновений XI-XII веков между графами Блуа и графами Анжуйскими, ставшими в XII веке герцогами
+  Нормандскими и королями Английскими (Генрих Плантагенет и Ричард Львиное Сердце). Последние, в свою очередь, на
+  рубеже XII-XIII веков воевали с Филиппом-Августом, расширившим владения Французской Короны за счет Турени,
+  Берри, Пуату, Нормандии и Анжу.
+</p>
+<p>
+  Здесь происходили драматические события Столетней войны, связанные с именем Карла VII, Жанны Д'Арк, Дюнуа.
+</p>
+<p>
+  Здесь проживали "прекрасные дамы" Агнесс Сорель (Карл VII), Диана Де Пуатье (Генрих II) и другие. Здесь, в Блуа,
+  в начале XVI века при Людовике XII и Франциске I находился двор и столица Франции.
+</p>
+<p>
+  Здесь работали привезенные из Италии мэтры Леонардо да Винчи, Фра Паччелло ди Маркольяно и другие.
+</p>
+<p>
+  Здесь разворачивалась ужасная драма гражданской войны (Религиозные войны) XVI века, связанная с именами
+  Екатерины Медичи, Карла IX, Генриха III, Генриха Де Гиза, Конти, Кондэ, Арманьяка, Генриха Наварского-Бурбона.
+</p>
+<p>
+  Здесь бывали и жили Людовик XIII, его брат Гастон Орлеанский, Людовик XIV, его тесть король Польский Станислав
+  Лещинский, герцог Саксонский, Мольер, Вольтер, Руссо, Монтескье, Наполеон Бонапарт, госпожа Де Сталь.
+</p>
