--- a/views/picardy.handlebars
+++ b/views/picardy.handlebars
@@ -1,1 +1,42 @@
-<h1>Пикардия</h1>
+<h1>
+  Пикардия, Фландрия, Брабант, Эно, Люксенбург
+</h1>
+
+<h2>
+  Замок Пьерфон
+</h2>
+
+<p>
+  Один из самых величественных замков Франции. Находится в родовых землях Валуа. Замок с богатой историей:
+  Людовик Орлеанский – брат короля Карла VI Безумного, Жанна д'Арк, Наполеон III.
+</p>
+<p>
+  Напомним, что герой Дюма - Портос - был бароном де Пьерфон.
+</p>
+
+<h2>
+  Замок Шантийи
+</h2>
+
+<p>
+  Красивейший замок на воде. Замок рода Монморенси и затем Конде. В настоящий момент - музей, обладающий
+  уникальной коллекцией картин и книг. К замку относится музей лошадей.
+</p>
+
+<h2>
+  Амьен
+</h2>
+
+<p>
+  Крупнейший собор Нотр Дам. Старинный город, столица Пикардии.
+</p>
+
+<h2>
+  Брюгге
+</h2>
+
+<p>
+  Красивейший город западной Фландрии. Богатейший город в XIV-XVI вв., замер в развитии в период индустриализации
+  XIX в. Спящая красавица, которая явила миру рафинированность позднего средневековья, характерные дома, улицы,
+  каналы и мосты.
+</p>
