--- a/views/alsace.handlebars
+++ b/views/alsace.handlebars
@@ -1,1 +1,29 @@
-<h1>Эльзас</h1>
+<h1>
+  Эльзас, Лотарингия, Вюртенберг, Швабия
+</h1>
+
+<p>
+  Эльзaс (фр. Alsace) - регион на северо-востоке Франции, граничащий с Германией и Швейцарией.
+</p>
+<p>
+  Столицей Эльзаса является Страсбург, второй город по величине — Мюлуз (супрефектура Верхнего Рейна), третий -
+  Кольмар (префектура Верхнего Рейна).
+</p>
+<p>
+  Эльзас разделен на два департамента:
+  <ul>
+    <li>
+      <span class="text-black">Нижний Рейн</span> (фр. Bas-Rhin) на севере с административным центром в Страсбурге
+    </li>
+    <li>
+      <span class="text-black">Верхний Рейн</span> (фр. Haut-Rhin) на юге с административным центром в Кольмаре
+    </li>
+  </ul>
+</p>
+<p>
+  Эльзас также является исторической областью Франции, включавшей некогда в свой состав Территорию Бельфор.
+</p>
+<p>
+  Эльзас-Лотарингия (фр. Alsace-Lorraine) - "имперская провинция" Германской империи, ныне территория восточной
+  Франции, состоящая из Эльзаса и восточной Лотарингии, связанных общей историей в период с 1871 по 1944 год.
+</p>
