Add contact form

--- a/views/alsace.handlebars
+++ b/views/alsace.handlebars
@@ -3,7 +3,7 @@
 </h1>
 
 <p>
-  Эльзaс (фр. Alsace) - регион на северо-востоке Франции, граничащий с Германией и Швейцарией.
+  Эльзaс - регион на северо-востоке Франции, граничащий с Германией и Швейцарией.
 </p>
 <p>
   Столицей Эльзаса является Страсбург, второй город по величине — Мюлуз (супрефектура Верхнего Рейна), третий -
@@ -13,10 +13,10 @@
   Эльзас разделен на два департамента:
   <ul>
     <li>
-      <span class="text-black">Нижний Рейн</span> (фр. Bas-Rhin) на севере с административным центром в Страсбурге
+      <span class="text-black">Нижний Рейн</span> на севере с административным центром в Страсбурге
     </li>
     <li>
-      <span class="text-black">Верхний Рейн</span> (фр. Haut-Rhin) на юге с административным центром в Кольмаре
+      <span class="text-black">Верхний Рейн</span> на юге с административным центром в Кольмаре
     </li>
   </ul>
 </p>
@@ -24,6 +24,6 @@
   Эльзас также является исторической областью Франции, включавшей некогда в свой состав Территорию Бельфор.
 </p>
 <p>
-  Эльзас-Лотарингия (фр. Alsace-Lorraine) - "имперская провинция" Германской империи, ныне территория восточной
-  Франции, состоящая из Эльзаса и восточной Лотарингии, связанных общей историей в период с 1871 по 1944 год.
+  Эльзас-Лотарингия - "имперская провинция" Германской империи, ныне территория восточной Франции, состоящая из
+  Эльзаса и восточной Лотарингии, связанных общей историей в период с 1871 по 1944 год.
 </p>
