--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -2,7 +2,7 @@
   Контакты
 </h1>
 
-<form class="w-full max-w-lg m-auto">
+<form class="w-full max-w-lg m-auto mb-4">
   <div class="md:flex md:items-center mb-6">
     <div class="md:w-1/3">
       <label class="block text-gray-500 font-bold md:text-right mb-1 md:mb-0 pr-4" for="inline-full-name">
@@ -52,9 +52,16 @@
   </div>
 </form>
 
-<p>
-    SARL FRANCE ET MOI<br>
-    66 Avenue des Champs Élysées<br>
-    75008<br>
-    Paris FRANCE<br>
-</p>
+<hr class="mb-4">
+
+<div class="flex mb-4">
+  <i class="fas fa-map-marker-alt fa-3x rounded-full mr-4 text-blue-300"></i>
+  <div>
+    <p class="text-gray-900 leading-none">SARL FRANCE ET MOI</p>
+    <p class="text-gray-600">
+    66 Avenue des Champs Élysées, 75008 Paris FRANCE
+    </p>
+  </div>
+</div>
+
+<iframe class="w-full" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.3334261059313!2d2.3032383150879365!3d48.87092000777943!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66fc3c52c6deb%3A0x9eda90a43280f6b0!2s66%20Av.%20des%20Champs-%C3%89lys%C3%A9es%2C%2075008%20Paris%2C%20Francia!5e0!3m2!1ses!2ses!4v1592573089703!5m2!1ses!2ses" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
